# vibe-clips

./: .env.example  .gitignore  ARCHITECTURE.md  PRD.md  README.md  RUBRIC.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plans/: mvp.plan.md
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  temp_subtitles.srt
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  lib.rs  screen_capture.rs  transcription.rs
src/components/: ConfirmDialog.css  ConfirmDialog.tsx
src/contexts/: RecordingContext.tsx  SubtitleContext.tsx  TimelineContext.tsx  VideoContext.tsx
src/features/export/: .gitkeep  ExportDialog.css  ExportDialog.tsx  index.ts
src/features/filters/: FilterPanel.css  FilterPanel.tsx
src/features/import/: .gitkeep  Import.tsx  ImportZone.css  ImportZone.tsx  MediaLibrary.css  MediaLibrary.tsx  index.ts
src/features/preview/: .gitkeep  VideoPlayer.css  VideoPlayer.tsx
src/features/recording/: CombinedRecording.css  CombinedRecording.tsx  RecordingPanel.css  RecordingPanel.tsx  ScreenRecording.css  ScreenRecording.tsx  WebcamRecording.css  WebcamRecording.tsx  index.ts
src/features/settings/: Settings.css  Settings.tsx
src/features/subtitles/: SubtitleEditor.css  SubtitleEditor.tsx  SubtitlePanel.css  SubtitlePanel.tsx  (+1 more)
src/hooks/: useCameraPreview.ts  useVideoMetadata.ts
src/types/: filters.ts  recording.ts  subtitle.ts  timeline.ts  video.ts
src/utils/: constants.ts  filters.ts  format.ts  index.ts  overlayPosition.ts
(+5 files in other folders)
