[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage_Streams",
    "Foundation",
    "System",
    "Win32_Graphics_Gdi",
    "Win32_Foundation"
] }

[features]
default = []
